BS5: Fix dashboard pagination overflow
avoid having a horizontal scrollbar on the entire page with a couple of wekll-places flex utilityies

--- a/frontend/css/listens-page.less
+++ b/frontend/css/listens-page.less
@@ -473,7 +473,6 @@
   display: flex;
   flex-wrap: wrap;
   & > .feed-button-and-date-time-picker {
-    flex: 1;
     order: 0;
     display: flex;
     align-items: center;
